# HermesTray

./: .gitignore  README.md  README.zh.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  tray.rs
src/components/: ChatPanel.tsx  SettingsPanel.tsx
